name:           xpath
version:        0.1
cabal-version:  >= 1.2
build-type:     Custom
author:         odr

library
  hs-source-dirs:  src
  build-depends:   base >= 4,
                   text >=0.11,
                   attoparsec >= 0.10.1,
                   xml-types >=0.3
  ghc-options:     -Wall -rtsopts -O2
  other-modules:   Text.XML.Stream.XPath,
                   Data.XPath.Types,
                   MainTest

executable XPathTest
  build-depends:   base >= 4
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts -O2
  main-is:         Main.hs
  other-modules:   Data.XPath.Types,
                   Text.XML.Stream.XPath

