name:           xpath
version:        0.1
cabal-version:  >= 1.2
build-type:     Custom
author:         odr

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   text >=0.11,
                   attoparsec >= 0.10.1,
                   xml-types >=0.3,
                   xml-conduit >=1.0.3,
                   system-filepath >=0.4.7,
                   transformers >=0.3,
                   data-default >=0.4,
                   conduit >=0.5.2.4,
                   bytestring >=0.9.2.1,
                   safe >=0.3,
                   bifunctors >=3.0
  ghc-options:     -Wall -rtsopts -O2
  other-modules:   
                   Data.XPath.Types,
                   Text.XML.Stream.XPath,
                   Text.XML.Stream.XPathProcess

executable XPathTest
  build-depends:   base >= 4
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts -O2
  main-is:         Main.hs
  other-modules:   
                   Data.XPath.Types,
                   Text.XML.Stream.XPath,
                   Text.XML.Stream.Convert

